...
            .imePadding()
            .padding(horizontal = 24.dp)
            .padding(top = 32.dp, bottom = 24.dp)
            .testTag("login_screen")
    ) {
        Text(
            text = "С возвращением!",
            fontSize = 31.sp,
            fontWeight = FontWeight.ExtraBold,
            color = speaking.text,
            maxLines = 1,
            overflow = TextOverflow.Ellipsis
        )
...
